    - added a runlabel-based "make heads" wrapper
    - reset baseline focal distance to 1 m; since the fields are now assumed to always be 2m wide and the real focus will be somewhat further than 1 m anyway,
      this shouldn't be spamming warn_focus_in_field flags


0.4.0, 21.10.20:
  - General:
    - Updated planning structures (project boards, milestones) to better reflect current perspective
    - renamed overview track preset to default, assuming potential tweaking by relevant routines; default max Runge-Kutta step set to 0.1 ps
    - Added trace strings to modules' messages
    - renamed units.py to aux.py, added replacement ceil() and floor() functions that allow "decimal spacing", adapted to the needs here
    - Ditched ASTRA's field smoothing in favor of a "rough" solution - just cut off "background" field at definition region's range.

  - ASTRA interface:
    - set default ASTRA verbosity to false
    - removed the concept of beam presets
    - .clean() no longer resets the beam
    - renamed field storage file from solenoid.dat to field.dat

  - Track presets:
    - Generator presets - left only uniform (ex line) and gauss (now flattened, max. 2D). Ring, b/c ne meshayet.
    - Run configuration - disabled ASTRA's field smoothing

  - Track module:
    - on the frontend:
      - finalized the felddurchgang plot
      - adapted the plots to new module structure
      - added fixed axes to focal fit check plot, swapped draw order around to have data in foreground
    - overhauled previous code towards modularity using run data storage & labeling
      - **to consider:** how to handle external parameters? Number and energy of particles, e.g.?
        - Works for now, will figure out later, when it will be time to integrate everything.
          - A shared settings object??
    - implemented focal trajectory fitting to off-axis "focusing" - seems rarely applicable now, however
    - improved focal region detection